--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cousins</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 
 </head>
 
 <body>
-    <h1>Personal portfolios</h1>
+    <h1 class="main-heading">Personal portfolios</h1>
+    <div class="main-portfolio">
+        <h3 id="person1">Hasibul Hasan</h3><br>
+        <img src="images/hasibul.jpg" alt="" width="20%">
+        <br><br>
+    </div>
+    <div class="character">
+        <p>Characteristics</p>
+        <p>1. </p>
+        <p>2. </p>
+        <p>3. </p>
+    </div>
+
 </body>
 
 </html>
