--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div class="character">
         <p>Characteristics</p>
-        <p>1. </p>
-        <p>2. </p>
-        <p>3. </p>
+        <p>1. Good boy </p>
+        <p>2. Good characteristics </p>
+        <p>3. clever</p>
     </div>
 
 </body>
