--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1 class="main-heading">Personal portfolios</h1>
+    <h1 class="main-heading">Family Members</h1>
     <div class="main-portfolio">
         <h3 id="person1">Hasibul Hasan</h3><br>
         <img src="images/hasibul.jpg" alt="" width="20%">
