--- a/index.html
+++ b/index.html
@@ -16,18 +16,35 @@
 
 <body>
     <h1 class="main-heading">Family Members</h1>
-    <div class="main-portfolio">
-        <h3 id="person1">Hasibul Hasan</h3><br>
-        <img src="images/hasibul.jpg" alt="" width="20%">
-        <br><br>
-    </div>
-    <div class="character">
-        <p>Characteristics</p>
-        <p>1. Good boy </p>
-        <p>2. Good characteristics </p>
-        <p>3. clever</p>
-    </div>
+    <section>
+        <div class="main-portfolio">
+            <h3 id="person1">Hasibul Hasan</h3><br>
+            <img src="images/hasibul.jpg" alt="" width="20%">
+            <br><br>
+        </div>
+        <div class="character">
+            <p>Characteristics</p>
+            <p>1. Good boy </p>
+            <p>2. Good characteristics </p>
+            <p>3. clever</p>
+        </div>
 
+    </section>
+    <br><br>
+    <section>
+        <div class="main-portfolio">
+            <h3 id="person1">Tamim</h3><br>
+            <img src="images/tamim.jpg" alt="" width="20%">
+            <br><br>
+        </div>
+        <div class="character">
+            <p>Characteristics</p>
+            <p>1. Good boy </p>
+            <p>2. Good characteristics </p>
+            <p>3. clever</p>
+        </div>
+
+    </section>
 </body>
 
 </html>
